--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,6 @@ dependencies = [
     "awscli>=1.40.27",
     "awscli-local>=0.22.0",
     "inquirer>=3.4.0",
+    "rich>=14.0.0",
+    "yaspin>=3.1.0",
 ]
